objects/Order.object
<CustomObject>
    <fields>
        <fullName>NS_Rif__c</fullName>
        <label>NS. Rif.</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_AccountTemporaneo__c</fullName>
        <label>Account Temporaneo</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_Apparato__c</fullName>
        <label>Apparato</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_AreaGeografica__c</fullName>
        <label>Area geografica</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_Asset_Verticale__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Asset Verticale</label>
        <referenceTo>OF_Asset_Verticale__c</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OF_Asset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Asset</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OF_CaseID__c</fullName>
        <label>CaseID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_CaseNome__c</fullName>
        <label>Case nome</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_Case__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp; OF_CaseID__c , OF_CaseNome__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_Civico__c</fullName>
        <label>Civico</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_ClusterPromozione__c</fullName>
        <label>Cluster Promozione</label>
        <length>160</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_CodiceKO__c</fullName>
        <label>Codice KO</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_CodiceProgettoSpeciale__c</fullName>
        <label>Codice Progetto Speciale</label>
        <length>160</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_Comune__c</fullName>
        <label>Comune</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_ContractTemporaneo__c</fullName>
        <label>Contract Temporaneo</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_Contratto__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp;  Contract.Id ,  Contract.OF_IdContratto__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contratto</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_DataEsito__c</fullName>
        <label>Data esito</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OF_Data_Cessazione__c</fullName>
        <label>Data Cessazione</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>OF_Datarichiesta__c</fullName>
        <label>Data richiesta</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OF_DescrizioneKO__c</fullName>
        <label>Descrizione KO</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>OF_EsitoConsegnaApparato__c</fullName>
        <label>Esito consegna apparato</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_Esito__c</fullName>
        <label>Esito</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>OK</fullName>
                </value>
                <value>
                    <fullName>KO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OF_GPONAttestazione__c</fullName>
        <label>GPON Attestazione</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_IDBuilding__c</fullName>
        <label>ID Building</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_IDCaso__c</fullName>
        <formula>IF( OF_Type__c = &apos;INORDER&apos;,  OF_CaseID__c  ,&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ID caso</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_IDContratto__c</fullName>
        <formula>Contract.OF_IdContratto__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IDContratto</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_IDOrdineEOF__c</fullName>
        <label>ID Ordine EOF</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_IDOrdineOLO__c</fullName>
        <label>ID Ordine OLO</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_IDRisorsa__c</fullName>
        <label>ID Risorsa</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_IDSegnalazione__c</fullName>
        <label>ID Segnalazione</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_IDServizio__c</fullName>
        <label>ID Servizio</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_IDSplitterSecondario__c</fullName>
        <label>IDSplitterSecondario</label>
        <length>160</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_IdNetworkInventory__c</fullName>
        <label>Id Network Inventory</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_IdentificativoDelPOP__c</fullName>
        <label>Identificativo del POP</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_Indirizzo__c</fullName>
        <label>Indirizzo</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_IsFromAsset__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isFromAsset</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OF_MotivazioneEsito__c</fullName>
        <label>Motivazione esito</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>OF_POP__c</fullName>
        <label>POP</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_ParticellaToponomastica__c</fullName>
        <label>Particella toponomastica</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_PasswordApparato__c</fullName>
        <label>Password Apparato</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_PosizioneSplitterSecondario__c</fullName>
        <label>PosizioneSplitterSecondario</label>
        <length>160</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_ProfiloOpenStream__c</fullName>
        <label>Profilo Open Stream</label>
        <length>160</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_Profilo__c</fullName>
        <label>Profilo</label>
        <length>160</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_ProgettoSpeciale__c</fullName>
        <label>Progetto Speciale</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_Promozione__c</fullName>
        <label>Promozione</label>
        <length>160</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_Provincia__c</fullName>
        <label>Provincia</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_Regione__c</fullName>
        <label>Regione</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_Remedy_Quantity__c</fullName>
        <label>OF Remedy Quantity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_Remedy_actionDate__c</fullName>
        <label>OF_Remedy actionDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>OF_Remedy_customerDivision__c</fullName>
        <label>OF Remedy customerDivision</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_Remedy_customerId__c</fullName>
        <label>OF Remedy customerId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_Remedy_customerOrder__c</fullName>
        <label>OF Remedy customerOrder</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_Remedy_faultCause__c</fullName>
        <label>OF Remedy faultCause</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_Remedy_faultResolution__c</fullName>
        <label>OF Remedy faultResolution</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_Remedy_internalOrder__c</fullName>
        <label>OF Remedy internalOrder</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_Remedy_oloCommCode__c</fullName>
        <label>OF Remedy oloCommCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_Remedy_oloMessageCode__c</fullName>
        <label>OF Remedy oloMessageCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_Remedy_oloMessage__c</fullName>
        <label>OF Remedy oloMessage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_Remedy_packageProvisioningCode__c</fullName>
        <label>OF Remedy packageProvisioningCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_Remedy_pricePlanProvisioningCode__c</fullName>
        <label>OF Remedy pricePlanProvisioningCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_Remedy_productProvisionigCode__c</fullName>
        <label>OF Remedy productProvisionigCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_Remedy_ttNumber__c</fullName>
        <label>OF Remedy ttNumber</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_Remedy_verticalOperator__c</fullName>
        <label>OF Remedy verticalOperator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_ScalaPalazzina__c</fullName>
        <label>Scala palazzina</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_Service_Code__c</fullName>
        <label>OF Service Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_SlaPremiumAssurance__c</fullName>
        <label>SLA PREMIUM ASSURANCE</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_TipologiaApparato__c</fullName>
        <label>Tipologia Apparato</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_TipologiaDiSegnalazione__c</fullName>
        <label>Tipologia di segnalazione</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_TipologiaDiServizio__c</fullName>
        <label>Tipologia di servizio</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_Type__c</fullName>
        <formula>RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Accordo_Operativo__c</fullName>
        <label>PO Accordo Operativo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Attenuazione__c</fullName>
        <label>Attenuazione</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_DataAttivazioneOrdine__c</fullName>
        <label>Data Attivazione Ordine</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PO_DataEspletamentoOrdine__c</fullName>
        <label>Data Espletamento Ordine</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PO_IsFromOpportunity__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsFromOpportunity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PO_LunghezzaOttica__c</fullName>
        <label>Lunghezza Ottica</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PO_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PO_PosizioneRilascioCircuitoOSU__c</fullName>
        <label>Posizione Rilascio Circuito OSU</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isFiberLease__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isFiberLease</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isFiberLink__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isFiberLink</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AllActivatedOrders</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ORDERS.STATUS_CODE</field>
            <operation>equals</operation>
            <value>A</value>
        </filters>
        <label>All Activated Orders</label>
    </listViews>
    <listViews>
        <fullName>AllDraftOrders</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ORDERS.STATUS_CODE</field>
            <operation>equals</operation>
            <value>D</value>
        </filters>
        <label>All Draft Orders</label>
    </listViews>
    <listViews>
        <fullName>AllOrders</fullName>
        <filterScope>Everything</filterScope>
        <label>All Orders</label>
    </listViews>
    <recordTypes>
        <fullName>OF_CHANGEORDER</fullName>
        <active>true</active>
        <label>CHANGE ORDER</label>
    </recordTypes>
    <recordTypes>
        <fullName>OF_INORDER</fullName>
        <active>true</active>
        <label>INORDER</label>
    </recordTypes>
    <recordTypes>
        <fullName>OF_OUTORDER</fullName>
        <active>true</active>
        <label>OUTORDER</label>
    </recordTypes>
    <recordTypes>
        <fullName>OF_TROUBLETICKET</fullName>
        <active>true</active>
        <label>TROUBLE TICKET</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
</CustomObject>